add service curd models
