# controller/admin_login.go
@@ -21,6 +21,7 @@ type AdminLoginController struct {
 func AdminLoginRegister(group *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
 	group.POST("/login", adminLogin.AdminLogin)
+	group.GET("/logout", adminLogin.AdminLoginOut)
 }
 
 // AdminLogin godoc
@@ -47,11 +48,13 @@ func (a *AdminLoginController) AdminLogin(c *gin.Context) {
 	tx, err := lib.GetGormPool("default")
 	if err != nil {
 		middleware.ResponseError(c, 2001, err)
+		return
 	}
 	admin := &dao.Admin{}
 	admin, err = admin.LoginInputParamsCheck(c, tx, params)
 	if err != nil {
 		middleware.ResponseError(c, 2002, err)
+		return
 	}
 	// 3. 保持会话
 	sessInfo := &dto.AdminSessionInfo{
@@ -62,6 +65,7 @@ func (a *AdminLoginController) AdminLogin(c *gin.Context) {
 	sessBts, err := json.Marshal(sessInfo)
 	if err != nil {
 		middleware.ResponseError(c, 2003, err)
+		return
 	}
 	sess := sessions.Default(c)
 	sess.Set(public.AdminSessionInfoKey, string(sessBts))
@@ -69,5 +73,27 @@ func (a *AdminLoginController) AdminLogin(c *gin.Context) {
 
 	// 4. 返回信息
 	out := &dto.AdminLoginOutput{Token: admin.UserName}
+	middleware.ResponseSuccess(c, out)
+}
+
+// AdminLoginOut godoc
+// @Summary 管理员退出
+// @Description 管理员退出
+// @Tags 管理员接口
+// @ID /admin_login/logout
+// @Accept json
+// @Produce json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin_login/logout [get]
+func (a *AdminLoginController) AdminLoginOut(c *gin.Context) {
+	// 1. 对gin的session进行对于key的删除
+	// 1.1 拿到session对象
+	sess := sessions.Default(c)
+	// 1.2 从对象中删除对于key
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+
+	// 2. 返回信息
+	out := "logout success."
 	middleware.ResponseSuccess(c, out)
 }
